--- a/Quizapp/index.html
+++ b/Quizapp/index.html
@@ -8,8 +8,19 @@
 </head>
 <body>
 
-
-    here is my first thing to do
+ <div class="app">
+    <h1>Simple Quiz</h1>
+    <div class="quiz">
+        <h2 id="question">Question goes here</h2>
+        <div class="answer-buttons">
+            <button class="btn">Answer 1</button>
+            <button class="btn">Answer 2</button>
+            <button class="btn">Answer 3</button>
+            <button class="btn">Answer 4</button>
+        </div>
+    </div>
+ </div>
+    
     
 </body>
 </html>
